--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     display: flex;
@@ -6,7 +6,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: #f0f0f0;
-}
+} */
 
 .media-grid {
     display: grid;
