--- a/static/css/index.css
+++ b/static/css/index.css
@@ -105,6 +105,8 @@ body {
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
+  display: inline-block;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
 
   overflow: hidden;
   border-radius: 10px !important;
