Media grid centering bug fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -232,7 +232,7 @@ body {
   grid-template-columns: repeat(5, 1fr); /* 5 columns specifically for the grid */
   grid-template-rows: repeat(2, auto); /* 2 rows */
   gap: 10px; /* space between grid items */
-  width: 80vw; /* limits the width to 80% of the viewport width */
+  max-width: 80vw; /* limits the width to 80% of the viewport width */
   margin: 20px auto; /* centers the grid and adds vertical spacing */
   justify-content: center;
 }
